docker-kubernetes/kubernetes-for-developers/ch06-scaling-up/01-external-metric-GCP/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeserver
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: timeserver-pod
  template:
    metadata:
      labels:
        pod: timeserver-pod
    spec:
      containers:
        - name: timeserver-container
          image: docker.io/wdenniss/timeserver:4
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
